--- a/public/styles.css
+++ b/public/styles.css
@@ -98,7 +98,7 @@ video.hidden {
 /* Volume & sound controls */
 .video-controls {
   position: absolute;
-  top: 0;
+  top: 12px;
   left: 0;
   right: 0;
   z-index: 10;
@@ -142,7 +142,6 @@ video.hidden {
   height: 32px;
   border-radius: 50%;
   background-color: #ffffff;
-  background-image: none;
   background-size: 16px 16px;
   background-position: center;
   background-repeat: no-repeat;
